2000-04-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: return m, not STALL.
	* Http.cc, Http.h, resource.cc: add http:user-agent setting.
	* MirrorJob.cc, MirrorJob.h: add --Remove-source-files option.
	* ResMgr.cc: fix small memory leak.
	* pgetJob.cc: resume CopyJob, maybe this fixes rare pget hang.

2000-03-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: disconnect even if control_sock==-1.
	* Filter.cc: add O_BINARY for windows.

2000-03-27  Alexander V. Lukyanov  <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: check --no-perms in reverse mirror;
	  take umask into account in reverse mirror (unless --no-umask
	  is specified).
	* Http.cc, Http.h: when there is "Accept-Ranges: none", don't send
	  Ranges: again; catch size of the file when Ranges: did not work;
	  workaround squid feature when server does not support Ranges:
	  but squid emulates it and thus lftp gets timeout.
	* FileCopy.cc, FileCopy.h: emulate eof when regetting a file which
	  is already complete and source does not support restarting.

2000-03-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* Job.h: (SetParentFg) new method.
	* CmdExec.cc, CopyJob.cc, FindJob.cc, MirrorJob.cc, SleepJob.cc,
	  commands.cc, mgetJob.cc, pgetJob.cc: use it.
	* lftpget: -u is obsolete.
	* MirrorJob.cc: set use_cache in child MirrorJob.

2000-03-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* Speedometer.cc: cast to int to avoid ambiguity on HP/UX.

2000-03-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, LsCache.cc, commands.cc: don't call macro alloca_strdup
	  on complex expressions.
	* FileCopy.cc: remove default value in function definition; count
	  rate when draining `put' in CONFIRM_STORE.
	* ResMgr.cc: include math.h for irix.
	* GetJob.cc: apply cwd in reverse mode.

2000-03-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: allow \n in file names, substitute it
	  with \0; clean up command sending.
